--- a/apps/frontend/src/app/global.css
+++ b/apps/frontend/src/app/global.css
@@ -14,6 +14,7 @@
   --case-min-width: 270px;
   --case-restricted-color: rgba(174, 54, 255, 0.2);
   --purple-gradient: linear-gradient(90deg, #AE49F2 0%, #8A66D9 100%);
+  --bg-dark: rgb(31 32 41);
 }
 
 .transition-custom {
@@ -66,4 +67,12 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.bg-dark {
+  background: var(--bg-dark);
+}
+
+.carousel-animation {
+    transition-timing-function: cubic-bezier(0, 0.5, 0.1, 1);
 }
