--- a/apps/frontend/src/app/global.css
+++ b/apps/frontend/src/app/global.css
@@ -39,6 +39,12 @@
   border-image-slice: 1;
 }
 
+.gradient-border-top {
+  border-top: 1px solid transparent;
+  border-image: var(--gradient-border-nav);
+  border-image-slice: 1;
+}
+
 .gradient-background {
   background: var(--green-gradient);
 }
@@ -66,6 +72,7 @@
   border-image: var(--purple-gradient);
   border-image-slice: 1;
 }
+
 
 .purple-gradient-text {
   background: var(--purple-gradient);
