--- a/apps/frontend/src/app/global.css
+++ b/apps/frontend/src/app/global.css
@@ -15,11 +15,14 @@
   --case-restricted-color: rgba(174, 54, 255, 0.2);
   --purple-gradient: linear-gradient(90deg, #AE49F2 0%, #8A66D9 100%);
   --bg-dark: rgb(31 32 41);
-  --chat-bar-color: rgba(25, 29, 48, 1);
+  --carousel-color: rgba(10, 24, 45, 1);
+  --main-element-background: rgba(29, 33, 38, 1);
 }
 
 .chat-bar {
-  background: var(--chat-bar-color);
+  border-right: 1px solid transparent;
+  border-image: var(--gradient-border-nav);
+  border-image-slice: 1;
 }
 
 .transition-custom {
@@ -87,4 +90,21 @@
 
 .carousel-animation {
     transition-timing-function: cubic-bezier(0, 0.5, 0.1, 1);
+}
+
+.carousel-color {
+  background: var(--carousel-color);
+}
+
+.carousel-item {
+  box-shadow: 0px 5px 20px 0px rgba(235, 76, 75, 1);
+  border: 1px solid;
+}
+
+.cases-container {
+  transition: grid-template-columns 0.5s ease-in-out;
+}
+
+.main-element {
+  box-shadow: 0 4px #1a1d22, 0 20px 50px #00000073, inset 0 1px #252a30;
 }
